page content are done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,19 +24,160 @@
                 </form>
             </div>
         </nav>
-    </div>
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
+        <div class="container-image-cover">
+            <img class="image-cover" src="/assets/photos/coverphoto.png" alt="">
+        </div>
+        <div class="cover-rectangle">
+            <button class="search-button">Search</button>
+        </div>
+        <div class="view-all-room-container">
+            <div class="view-all-room-text">
+                Rooms we recommend
+                for our customers
             </div>
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+            <button class="view-all-rooms-button">View All Rooms</button>
+        </div>
+        <div class="card-group">
+            <div class="card">
+                <img src="/assets/photos/photo1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Deluxe Contrast Room</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional
+                        content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+            <div class="card">
+                <img src="/assets/photos/photo2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Single Contrast Room</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="/assets/photos/photo3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Deluxe Contrast Room</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional
+                        content. This card has even longer content than the first to show that equal height action.</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+            <div></div>
+        </div>
+        <div class="facilities-rectangle">
+            <div class="facilities-rectangle-text">See the facilities we provide in real time</div>
+            <div class="rectangle-card">
+                <div class="workspace-item1">
+                    <img src="/assets/photos/icons8-workspace-50.png" class="img-of-facility">
+                    <div class="facility-text">Private Workspace</div>
+                </div>
+                <div class="workspace-item1">
+                    <img src="/assets/photos/icons8-outdoor-table-24.png" class="img-of-facility">
+                    <div class="facility-text">Outdoor Workspace</div>
+                </div>
+                <div class="workspace-item1">
+                    <img src="/assets/photos/icons8-swimming-50.png" class="img-of-facility">
+                    <div class="facility-text">Swimming Pool</div>
+                </div>
+                <div class="workspace-item1">
+                    <img src="/assets/photos/icons8-parking-64.png" class="img-of-facility">
+                    <div class="facility-text">Parking Area</div>
+                </div>
+                <div class="workspace-item1">
+                    <img src="/assets/photos/icons8-wifi-50.png" class="img-of-facility">
+                    <div class="facility-text">Free Wifi</div>
+                </div>
+                <div class="workspace-item1">
+                    <img src="/assets/photos/icons8-breakfast-64.png" class="img-of-facility">
+                    <div class="facility-text">Breakfast</div>
+                </div>
+                <div class="workspace-item1">
+                    <img src="/assets/photos/icons8-electricity-50.png" class="img-of-facility">
+                    <div class="facility-text">Free Electricity</div>
+                </div>
+                <div class="workspace-item1">
+                    <img src="/assets/photos/icons8-laundry-50.png" class="img-of-facility">
+                    <div class="facility-text">Laundry Service</div>
+                </div>
+                <div class="workspace-item1">
+                    <img src="/assets/photos/icons8-gym-50.png" class="img-of-facility">
+                    <div class="facility-text">Others</div>
+                </div>
             </div>
         </div>
+        <div class="popular-facilities-container">
+            <div class="popular-facilities-text">We organize the most popular facilities to our customers</div>
+            <div class="card mb-3"
+                style="max-width: 1000px; margin-top: 100px; margin-left: 350px; background-color: transparent; border-color: transparent; ">
+                <div class="row g-0">
+                    <div class="col-md-4" style="width: 482px; height: 576px;">
+                        <img style="width: 482px; height: 576px;" src="/assets/photos/resturentimg.png"
+                            class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8" style="width: 500px;">
+                        <div class="card-body">
+                            <h5 class="card-title" style="font-size: 35px; margin-left: -230px; margin-top: 100px;">
+                                Restaurent</h5>
+                            <p class="card-text" style="margin-left: 34px; text-align: left; font-size: 23px">
+                                A restaurent or an eatery, is a business that prepares and serves food and drinks to
+                                customers. Meals are generally served and eaten on the premises, but many restaurent
+                                also offer take-out and food delivery services.
+                            </p>
+                            <button class="facility-visit-now-button">Visit Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3 "
+                style="max-width: 1000px; margin-top: 175px; margin-left: 350px; background-color: transparent; border-color: transparent; ">
+                <div class="row g-0">
+                    <div class="col-md-4" style="width: 482px; height: 576px;">
+                        <img style="width: 482px; height: 576px; margin-left: 535px;" src="/assets/photos/gym.png"
+                            class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8" style="width: 500px;">
+                        <div class="card-body">
+                            <h5 class="card-title" style="font-size: 35px; margin-left: -1480px; margin-top: 100px;">GYM
+                                Center</h5>
+                            <p class="card-text"
+                                style="margin-left: -600px; text-align: left; font-size: 23px; width: 580px">
+                                Fitness clubs or gyms may be defined as any person, firm, coperation, organization,
+                                club, or association engaged in the sale of instructions, training, or assistance in a
+                                program of physical exercize or weight reduction.
+                            </p>
+                            <button class="facility-gym-visit-now-button">Visit Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3"
+                style="max-width: 1000px; margin-top: 175px; margin-left: 350px; background-color: transparent; border-color: transparent; ">
+                <div class="row g-0">
+                    <div class="col-md-4" style="width: 482px; height: 576px;">
+                        <img style="width: 482px; height: 576px;" src="/assets/photos/Rectangle 42.png"
+                            class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8" style="width: 500px;">
+                        <div class="card-body">
+                            <h5 class="card-title" style="font-size: 35px; margin-left: -160px; margin-top: 100px;">
+                                Swimming Pool</h5>
+                            <p class="card-text" style="margin-left: 34px; text-align: left; font-size: 23px">
+                                Swimming pools are places of relaxation, ease, calmness, and pleasure. These dreams
+                                could also indi cate repressing emotions and feeling bad because of that. This dreams
+                                could indicate that you need to get in touch with your feelings.
+                            </p>
+                            <button class="facility-visit-now-button">Visit Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -45,17 +187,208 @@
 </html>
 
 <style>
+    .facility-gym-visit-now-button {
+        background-color: transparent;
+        border-color: #61a5c2;
+        color: #61a5c2;
+        border-radius: 30px;
+        width: 150px;
+        height: 60px;
+        margin-left: -1520px;
+        margin-top: 30px;
+    }
+
+    .facility-gym-visit-now-button:hover {
+        background-color: #61a5c2;
+        color: white;
+        border-color: transparent;
+    }
+
+    .facility-visit-now-button {
+        background-color: transparent;
+        border-color: #61a5c2;
+        color: #61a5c2;
+        border-radius: 30px;
+        width: 150px;
+        height: 60px;
+        margin-left: -250px;
+        margin-top: 30px;
+    }
+
+    .facility-visit-now-button:hover {
+        background-color: #61a5c2;
+        color: white;
+        border-color: transparent;
+    }
+
+    .popular-facilities-container {
+        margin-top: 100px;
+        width: 1710px;
+        height: 1000px;
+        background-color: transparent;
+        text-align: center;
+    }
+
+    .popular-facilities-text {
+        font-family: 'roboto', sans-serif;
+        font-weight: 500;
+        font-size: 50px;
+        letter-spacing: 8px;
+        width: 1000px;
+        padding-top: 40px;
+        margin-left: 350px;
+        text-align: center;
+    }
+
+    .workspace-item1 {
+        width: 250px;
+        height: 100px;
+        text-align: center;
+    }
+
+    .facility-text {
+        margin-top: 10px;
+        font-family: 'roboto', sans-serif;
+        font-size: 25px;
+        width: 250px;
+        text-align: center;
+    }
+
+    .img-of-facility {
+        width: 50px;
+        height: 50px;
+    }
+
+    .rectangle-card {
+        display: grid;
+        flex-wrap: wrap;
+        justify-content: center;
+        grid-template-columns: repeat(3, 1fr);
+        margin-left: 175px;
+        margin-top: 60px;
+        row-gap: 50px;
+    }
+
+    .facilities-rectangle-text {
+        font-family: 'roboto', sans-serif;
+        font-weight: 500;
+        font-size: 50px;
+        letter-spacing: 8px;
+        width: 800px;
+        padding-top: 75px;
+        margin-left: 350px;
+        text-align: center;
+    }
+
+    .facilities-rectangle {
+        background-color: #61a5c21c;
+        height: 750px;
+        width: 1490px;
+        margin-top: 150px;
+        margin-left: 100px;
+        margin-right: 100px;
+        border-radius: 50px;
+    }
+
+    .card-img-top {
+        border-top-left-radius: 50px;
+        border-top-right-radius: 50px;
+    }
+
+    .card {
+        margin-left: 100px;
+        margin-right: 100px;
+        border-radius: 50px;
+    }
+
+    .view-all-rooms-button {
+        position: absolute;
+        top: 925px;
+        right: 100px;
+        background-color: transparent;
+        border-color: #61a5c2;
+        color: #61a5c2;
+        border-radius: 30px;
+        width: 250px;
+        height: 60px;
+    }
+
+    .view-all-rooms-button:hover {
+        position: absolute;
+        top: 925px;
+        right: 100px;
+        background-color: #61a5c2;
+        color: white;
+        border-color: transparent;
+        border-radius: 30px;
+        width: 250px;
+        height: 60px;
+    }
+
+    .view-all-room-text {
+        font-family: 'roboto', sans-serif;
+        font-weight: 500;
+        font-size: 57px;
+        letter-spacing: 8px;
+        width: 800px;
+        margin-top: 150px;
+        margin-left: 160px;
+    }
+
+    .view-all-room-container {
+        height: 250px;
+    }
+
+    .search-button {
+        background-image: url('/assets/photos/icons8-search-50.png');
+        background-size: 35px 35px;
+        background-repeat: no-repeat;
+        background-position: 25px center;
+        color: white;
+        font-size: 28px;
+        background-color: #61a5c2;
+        height: 100px;
+        width: 200px;
+        margin-left: 800px;
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 50px;
+        border-color: transparent;
+        padding-left: 40px;
+    }
+
+    .cover-rectangle {
+        border-radius: 50px;
+        position: relative;
+        background-color: white;
+        box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.097);
+        margin-top: -50px;
+        margin-left: 330px;
+        width: 1000px;
+        height: 100px;
+    }
+
+    .image-cover {
+        border-top-left-radius: 50px;
+        border-top-right-radius: 50px;
+    }
+
+    .container-image-cover {
+        margin-top: 20px;
+        width: 1707px;
+        height: 550px;
+    }
+
     .me-2 {
         width: 400px;
-        border-color: #61a5c2;    
+        border-color: #61a5c2;
     }
 
     .me-2::placeholder {
-        color: #61a5c2;    
+        color: #61a5c2;
     }
 
     .me-2:focus {
-        box-shadow: 0 0 5px 2px #61a5c275;    
+        box-shadow: 0 0 5px 2px #61a5c275;
     }
 
     .btn-outline-success {
@@ -84,7 +417,7 @@
 
     .container-fluid {
         height: 75px;
-        background-color: white;
+        background-color: #F8F8F8;
     }
 
     .d-inline-block {
